samples/_failures_safe/1761223180_1e18ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_611bdeaf.c: In function ‘initialize_parser’:
./samples/SAFE/__tmp_611bdeaf.c:152:5: error: expected expression at end of input
  152 |     context->token_total =
      |     ^~~~~~~
./samples/SAFE/__tmp_611bdeaf.c:152:5: error: expected declaration or statement at end of input
